--- a/Angular/ClientApp/src/app/containers/default-layout/default-layout.component.html
+++ b/Angular/ClientApp/src/app/containers/default-layout/default-layout.component.html
@@ -1,11 +1,9 @@
-<app-messages></app-messages>
-<app-header
-  [navbarBrandRouterLink]="['/dashboard']"
-  [fixed]="true"
-  [navbarBrandFull]="{src: 'assets/img/brand/logo.svg', width: 89, height: 25, alt: 'CoreUI Logo'}"
-  [navbarBrandMinimized]="{src: 'assets/img/brand/sygnet.svg', width: 30, height: 30, alt: 'CoreUI Logo'}"
-  [sidebarToggler]="'lg'"
-  [asideMenuToggler]="'lg'">
+<app-header [navbarBrandRouterLink]="['/dashboard']"
+            [fixed]="true"
+            [navbarBrandFull]="{src: 'assets/img/brand/logo.svg', width: 89, height: 25, alt: 'CoreUI Logo'}"
+            [navbarBrandMinimized]="{src: 'assets/img/brand/sygnet.svg', width: 30, height: 30, alt: 'CoreUI Logo'}"
+            [sidebarToggler]="'lg'"
+            [asideMenuToggler]="'lg'">
   <ul class="nav navbar-nav d-md-down-none">
     <li class="nav-item px-3">
       <a class="nav-link" href="#">Dashboard</a>
@@ -29,7 +27,7 @@
     </li>
     <li class="nav-item dropdown" dropdown placement="bottom right">
       <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">
-        <img src="assets/img/avatars/6.jpg" class="img-avatar" alt="admin@bootstrapmaster.com"/>
+        <img src="assets/img/avatars/6.jpg" class="img-avatar" alt="admin@bootstrapmaster.com" />
       </a>
       <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
         <div class="dropdown-header text-center"><strong>Account</strong></div>
@@ -70,15 +68,15 @@
     </cui-breadcrumb>
     <!-- deprecation warning for 'app-breadcrumb' -->
     <!--<ol class="breadcrumb">-->
-      <!--<app-breadcrumb></app-breadcrumb>-->
-      <!--&lt;!&ndash; Breadcrumb Menu&ndash;&gt;-->
-      <!--<li class="breadcrumb-menu d-md-down-none">-->
-        <!--<div class="btn-group" role="group" aria-label="Button group with nested dropdown">-->
-          <!--<a class="btn" href="#"><i class="icon-speech"></i></a>-->
-          <!--<a class="btn" [routerLink]="['/dashboard']"><i class="icon-graph"></i> &nbsp;Dashboard</a>-->
-          <!--<a class="btn" href="#"><i class="icon-settings"></i> &nbsp;Settings</a>-->
-        <!--</div>-->
-      <!--</li>-->
+    <!--<app-breadcrumb></app-breadcrumb>-->
+    <!--&lt;!&ndash; Breadcrumb Menu&ndash;&gt;-->
+    <!--<li class="breadcrumb-menu d-md-down-none">-->
+    <!--<div class="btn-group" role="group" aria-label="Button group with nested dropdown">-->
+    <!--<a class="btn" href="#"><i class="icon-speech"></i></a>-->
+    <!--<a class="btn" [routerLink]="['/dashboard']"><i class="icon-graph"></i> &nbsp;Dashboard</a>-->
+    <!--<a class="btn" href="#"><i class="icon-settings"></i> &nbsp;Settings</a>-->
+    <!--</div>-->
+    <!--</li>-->
     <!--</ol>-->
     <div class="container-fluid">
       <router-outlet></router-outlet>
@@ -94,35 +92,44 @@
             <div class="avatar float-right">
               <img class="img-avatar" src="assets/img/avatars/7.jpg" alt="admin@bootstrapmaster.com">
             </div>
-            <div>Meeting with
+            <div>
+              Meeting with
               <strong>Lucas</strong>
             </div>
             <small class="text-muted mr-3">
-              <i class="icon-calendar"></i>  1 - 3pm</small>
+              <i class="icon-calendar"></i>  1 - 3pm
+            </small>
             <small class="text-muted">
-              <i class="icon-location-pin"></i>  Palo Alto, CA</small>
+              <i class="icon-location-pin"></i>  Palo Alto, CA
+            </small>
           </div>
           <div class="list-group-item list-group-item-accent-info">
             <div class="avatar float-right">
               <img class="img-avatar" src="assets/img/avatars/4.jpg" alt="admin@bootstrapmaster.com">
             </div>
-            <div>Skype with
+            <div>
+              Skype with
               <strong>Megan</strong>
             </div>
             <small class="text-muted mr-3">
-              <i class="icon-calendar"></i>  4 - 5pm</small>
+              <i class="icon-calendar"></i>  4 - 5pm
+            </small>
             <small class="text-muted">
-              <i class="icon-social-skype"></i>  On-line</small>
+              <i class="icon-social-skype"></i>  On-line
+            </small>
           </div>
           <div class="list-group-item list-group-item-accent-secondary bg-light text-center font-weight-bold text-muted text-uppercase small">Tomorrow</div>
           <div class="list-group-item list-group-item-accent-danger list-group-item-divider">
-            <div>New UI Project -
+            <div>
+              New UI Project -
               <strong>deadline</strong>
             </div>
             <small class="text-muted mr-3">
-              <i class="icon-calendar"></i>  10 - 11pm</small>
+              <i class="icon-calendar"></i>  10 - 11pm
+            </small>
             <small class="text-muted">
-              <i class="icon-home"></i>  creativeLabs HQ</small>
+              <i class="icon-home"></i>  creativeLabs HQ
+            </small>
             <div class="avatars-stack mt-2">
               <div class="avatar avatar-xs">
                 <img class="img-avatar" src="assets/img/avatars/2.jpg" alt="admin@bootstrapmaster.com">
@@ -143,20 +150,25 @@
           </div>
           <div class="list-group-item list-group-item-accent-success list-group-item-divider">
             <div>
-              <strong>#10 Startups.Garden</strong> Meetup</div>
+              <strong>#10 Startups.Garden</strong> Meetup
+            </div>
             <small class="text-muted mr-3">
-              <i class="icon-calendar"></i>  1 - 3pm</small>
+              <i class="icon-calendar"></i>  1 - 3pm
+            </small>
             <small class="text-muted">
-              <i class="icon-location-pin"></i>  Palo Alto, CA</small>
+              <i class="icon-location-pin"></i>  Palo Alto, CA
+            </small>
           </div>
           <div class="list-group-item list-group-item-accent-primary list-group-item-divider">
             <div>
               <strong>Team meeting</strong>
             </div>
             <small class="text-muted mr-3">
-              <i class="icon-calendar"></i>  4 - 6pm</small>
+              <i class="icon-calendar"></i>  4 - 6pm
+            </small>
             <small class="text-muted">
-              <i class="icon-home"></i>  creativeLabs HQ</small>
+              <i class="icon-home"></i>  creativeLabs HQ
+            </small>
             <div class="avatars-stack mt-2">
               <div class="avatar avatar-xs">
                 <img class="img-avatar" src="assets/img/avatars/2.jpg" alt="admin@bootstrapmaster.com">
@@ -340,3 +352,4 @@
   <span><a href="https://coreui.io">CoreUI</a> &copy; 2021 creativeLabs.</span>
   <span class="ml-auto">Powered by <a href="https://coreui.io/angular">CoreUI for Angular</a></span>
 </app-footer>
+<app-messages></app-messages>
