--- a/Angular/ClientApp/src/app/containers/default-layout/default-layout.component.html
+++ b/Angular/ClientApp/src/app/containers/default-layout/default-layout.component.html
@@ -349,7 +349,7 @@
   </app-aside>
 </div>
 <app-footer>
+  <div><app-messages></app-messages></div>
   <span><a href="https://coreui.io">CoreUI</a> &copy; 2021 creativeLabs.</span>
   <span class="ml-auto">Powered by <a href="https://coreui.io/angular">CoreUI for Angular</a></span>
 </app-footer>
-<app-messages></app-messages>
